--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "gulp-sourcemaps": "^2.6.5",
     "gulp-watch": "^5.0.1"
   },
+  "browserslist":["> 0.3%", "not dead"],
   "devDependencies": {
     "@babel/core": "^7.10.2",
     "@babel/preset-env": "^7.10.2",
@@ -20,7 +21,8 @@
     "gulp-uglify": "^3.0.2"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "watch": "gulp watch",
+    "build": "gulp build"
   },
   "keywords": [],
   "author": "",
